fixed styling and a bug on product section of the before not showing

--- a/app/assets/stylesheets/components/_contact_form.scss
+++ b/app/assets/stylesheets/components/_contact_form.scss
@@ -1,7 +1,6 @@
 .contact-section {
   position: relative;
   background-color: #f8f8f8;
-  margin-top: 6%;
 }
 
 #contact {
