--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,75 +1,85 @@
 // Specific CSS for your home-page
 
 // Intro section
-.grid-intro {
-  display: grid;
-  grid-template-columns: 1.5fr 1fr;
-  margin-top: 6%;
-  align-items: center;
+.main-intro {
+  background-color: #f8f8f8;
 
-  .intro-message {
-    text-align: right;
-    padding-right: 42px;
+  .grid-intro {
+    display: grid;
+    grid-template-columns: 1.5fr 1fr;
+    padding: 6% 0;
+    align-items: center;
 
-    h3 {
-      color: $font-tea;
-      font-style: italic;
-      font-size: 24px;
-    }
+    .intro-message {
+      text-align: right;
+      padding-right: 42px;
 
-    h2 {
-      text-align: center;
-      position: relative;
-      padding-bottom: 12px;
-      &::before {
-        height: 1px;
-        width: 150px;
-        background-color: $font-tea;
-        position: absolute;
-        content: "";
-        bottom: 0;
-        left: 0;
-        right: 0;
-        margin: 0 auto;
+      p {
+        font-weight: 200;
+        font-size: 15px;
+        font-style: italic;
       }
-      &::after {
-        content: "";
-        width: 10px;
-        height: 10px;
-        bottom: -5px;
-        background-color: $font-tea;
-        -webkit-transform: rotate(45deg);
-        position: absolute;
-        left: 0;
-        right: 0;
-        margin: 0 auto;
+
+      .buy-cta-btn-no-background {
+        padding: 8px 10px;
       }
     }
 
-    p {
-      font-weight: 200;
-      font-size: 15px;
-      font-style: italic;
-    }
-
-    .buy-cta-btn-no-background {
-      padding: 8px 10px;
-    }
-  }
-
-  .intro-pics {
-    display: flex;
-    grid-gap: 20px;
-    &-first img:not(:last-child) {
-      margin-bottom: 20px;
-    }
-
-    &-second {
-      align-self: center;
-
-      img:not(:last-child) {
+    .intro-pics {
+      display: flex;
+      grid-gap: 20px;
+      &-first img:not(:last-child) {
         margin-bottom: 20px;
       }
+
+      &-second {
+        align-self: center;
+
+        img:not(:last-child) {
+          margin-bottom: 20px;
+        }
+      }
+    }
+  }
+}
+
+// This part of intro-message is shared between other sections
+
+.intro-message {
+  h3 {
+    color: $font-tea;
+    font-style: italic;
+    font-size: 24px;
+  }
+
+  h2 {
+    text-align: center;
+    position: relative;
+    padding-bottom: 12px;
+
+    &::before {
+      height: 1px;
+      width: 150px;
+      background-color: $font-tea;
+      position: absolute;
+      content: "";
+      bottom: 0;
+      left: 0;
+      right: 0;
+      margin: 0 auto;
+    }
+
+    &::after {
+      content: "";
+      width: 10px;
+      height: 10px;
+      bottom: -5px;
+      background-color: $font-tea;
+      transform: rotate(45deg);
+      position: absolute;
+      left: 0;
+      right: 0;
+      margin: 0 auto;
     }
   }
 }
@@ -80,7 +90,7 @@
   background-image: asset_url("display-products-banner.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  margin-top: 6%;
+
   h2 {
     color: white;
     margin-bottom: 24px;
